refactor integration tests

--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests
       - name: Maven Verify
-        run: mvn -B clean verify
+        run: mvn -B clean verify -Pcomponent-test
