add jacoco merged report

--- a/pom.xml
+++ b/pom.xml
@@ -125,72 +125,72 @@
 					<reportsDirectory>${surefire.and.failsafe.report.dir}</reportsDirectory>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.jacoco</groupId>-->
-<!--				<artifactId>jacoco-maven-plugin</artifactId>-->
-<!--				<version>0.8.5</version>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>pre-unit-test</id>-->
-<!--						<goals>-->
-<!--							<goal>prepare-agent</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--					<execution>-->
-<!--						<id>unit-test-report</id>-->
-<!--						<phase>test</phase>-->
-<!--						<goals>-->
-<!--							<goal>report</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>-->
-<!--							<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--					<execution>-->
-<!--						<id>pre-integration-test</id>-->
-<!--						<phase>pre-integration-test</phase>-->
-<!--						<goals>-->
-<!--							<goal>prepare-agent</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--					<execution>-->
-<!--						<id>integration-test-report</id>-->
-<!--						<phase>post-integration-test</phase>-->
-<!--						<goals>-->
-<!--							<goal>report</goal>-->
-<!--						</goals>-->
-<!--						<configuration>-->
-<!--							<dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>-->
-<!--							<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--					<execution>-->
-<!--						<id>merge-all-jacoco</id>-->
-<!--						<goals>-->
-<!--							<goal>merge</goal>-->
-<!--						</goals>-->
-<!--						<phase>verify</phase>-->
-<!--						<configuration>-->
-<!--							<destFile>target/coverage-reports/jacoco-merged.exec</destFile>-->
-<!--							<fileSets>-->
-<!--								<fileSet>-->
-<!--									<directory>target/coverage-reports/</directory>-->
-<!--									<includes>-->
-<!--										<include>*.exec</include>-->
-<!--									</includes>-->
-<!--								</fileSet>-->
-<!--							</fileSets>-->
-<!--						</configuration>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.5</version>
+				<executions>
+					<execution>
+						<id>pre-unit-test</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>unit-test-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
+							<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>pre-integration-test</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+						<configuration>
+							<destFile>${project.build.directory}/coverage-reports/jacoco-it.exec</destFile>
+						</configuration>
+					</execution>
+					<execution>
+						<id>integration-test-report</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<dataFile>${project.build.directory}/coverage-reports/jacoco-it.exec</dataFile>
+							<outputDirectory>${project.reporting.outputDirectory}/jacoco-it</outputDirectory>
+						</configuration>
+					</execution>
+					<execution>
+						<id>merge-all-jacoco</id>
+						<goals>
+							<goal>merge</goal>
+						</goals>
+						<phase>verify</phase>
+						<configuration>
+							<destFile>target/coverage-reports/jacoco-merged.exec</destFile>
+							<fileSets>
+								<fileSet>
+									<directory>target/coverage-reports/</directory>
+									<includes>
+										<include>*.exec</include>
+									</includes>
+								</fileSet>
+							</fileSets>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
