--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>jackson-module-jaxb-annotations</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.vavr</groupId>
+			<artifactId>vavr</artifactId>
+			<version>0.10.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
