actuator added & spring profiles introduced

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
@@ -186,6 +190,33 @@
 	</build>
 
 	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<active-profiles>default</active-profiles>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<active-profiles>prod</active-profiles>
+			</properties>
+		</profile>
+		<profile>
+			<id>local-postgres</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<properties>
+				<active-profiles>local-postgres</active-profiles>
+			</properties>
+		</profile>
 		<profile>
 			<id>component-test</id>
 			<build>
