simple jekyll docs page

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -14,10 +14,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Publish docs page
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/page
-          enable_jekyll: true
-          user_name: 'github-actions[bot]'
-          user_email: 'github-actions[bot]@users.noreply.github.com'
+        uses: helaili/jekyll-action@2.0.1
+        env:
+          JEKYLL_PAT: ${{ secrets.JEKYLL_PAT }}
