--- a/docs/page/Gemfile
+++ b/docs/page/Gemfile
@@ -1,11 +1,7 @@
-source 'http://rubygems.org'
+source 'https://rubygems.org'
+
+gem 'jekyll', '~> 4.0'
 
 group :jekyll_plugins do
-  gem 'jekyll'
-  gem 'jekyll-admin'
-  gem 'jekyll-paginate'
-  gem 'support-for'
-  gem 'jekyll-seo-tag'
-  gem 'jekyll-sitemap'
-  gem 'jekyll-livereload'
- end
+  gem 'jekyll-timeago', '~> 0.13.1'
+end
