github actions checkout

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
+        with:
+          path: ./docs/page
 
       - name: Publish docs page
         uses: helaili/jekyll-action@2.0.1
