--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,7 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          path: docs/page
+          path: ./docs/page
+
+      - run: tree -a
+
+      - uses: actions/upload-artifact@v2
+        with:
+          path: .
 
       - name: Publish docs page
         uses: helaili/jekyll-action@2.0.1
