--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - run: cp -r ./repo/docs/page .
 
-      - run: rmdir ./repo
+      - run: rmdir -rf ./repo
 
       - name: Publish docs page
         uses: helaili/jekyll-action@2.0.1
