openapi-generator command

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm install @openapitools/openapi-generator-cli
 
       - name: Generate OpenApi documentation
-        run: $(npm bin)/openapi-generator generate -i api-docs.yaml -g html /api
+        run: $(npm bin)/openapi-generator generate -i api-docs.yaml -g html -o /api
         # continue-on-error: true
 
       - uses: actions/upload-artifact@v2
