--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -20,6 +20,7 @@ jobs:
           cp -r ./repo/docs/page/* .
           cp ./repo/docs/api-docs.yaml .
           rm -rf ./repo
+          mkdir api
 
       - name: Dependencies for OpenApi
         run: npm install @openapitools/openapi-generator-cli
