--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -26,7 +26,7 @@ jobs:
         run: npm install @openapitools/openapi-generator-cli
 
       - name: Generate OpenApi documentation
-        run: $(npm bin)/openapi-generator generate -i api-docs.yaml -g html2 -o /api
+        run: $(npm bin)/openapi-generator generate -i api-docs.yaml -g html2 -o ./api
         # continue-on-error: true
 
       - uses: actions/upload-artifact@v2
